--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     // SpringBoot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // ModelMapper
