--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,7 @@
   "name": "xrage",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:XRage": "node dist/xrage/server/server.mjs"
+    "start": "ng serve"
   },
   "private": true,
   "dependencies": {
