--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "xrage",
   "version": "0.0.0",
   "scripts": {
-    "start": "ng serve"
+    "start": "ng serve --open"
   },
   "private": true,
   "dependencies": {
@@ -26,14 +26,7 @@
     "@angular/cli": "^17.3.9",
     "@angular/compiler-cli": "^17.3.0",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
   }
 }
