--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -5,10 +5,10 @@
   "projects": {
     "XRage": {
       "projectType": "application",
-      "schematics": { 
-        "@schematics/angular:component": { 
-          "style": "scss" 
-        } 
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
       },
       "root": "",
       "sourceRoot": "src",
@@ -19,7 +19,42 @@
           "options": {
             "outputPath": "dist/xrage",
             "index": "src/index.html",
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss",
+              {
+                "input": "node_modules/@ionic/angular/css/core.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/normalize.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/structure.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/typography.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/display.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/padding.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/float-elements.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/text-alignment.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/text-transformation.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/flex-utils.css"
+              },
+              {
+                "input": "src/theme/variables.css"
+              }
+            ],
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -73,11 +108,46 @@
           "options": {
             "port": 80
           }
+        },
+        "ionic-cordova-serve": {
+          "builder": "@ionic/angular-toolkit:cordova-serve",
+          "options": {
+            "cordovaBuildTarget": "XRage:ionic-cordova-build",
+            "devServerTarget": "XRage:serve"
+          },
+          "configurations": {
+            "production": {
+              "cordovaBuildTarget": "XRage:ionic-cordova-build:production",
+              "devServerTarget": "XRage:serve:production"
+            }
+          }
+        },
+        "ionic-cordova-build": {
+          "builder": "@ionic/angular-toolkit:cordova-build",
+          "options": {
+            "browserTarget": "XRage:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "XRage:build:production"
+            }
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "415a71a4-2583-4d08-8818-1e86cab01e93"
+    "analytics": "415a71a4-2583-4d08-8818-1e86cab01e93",
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ]
+  },
+  "schematics": {
+    "@ionic/angular-toolkit:component": {
+      "styleext": "scss"
+    },
+    "@ionic/angular-toolkit:page": {
+      "styleext": "scss"
+    }
   }
 }
