--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.9",
+    "@ionic/angular": "^8.3.1",
     "express": "^4.18.2",
+    "ionicons": "^7.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -27,6 +29,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.18.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "@ionic/angular-toolkit": "latest"
   }
 }
