changed package in jar manifest

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -13,7 +13,7 @@ repositories {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'org.cheesecake.mango.XRage'
+        attributes 'Main-Class': 'org.cheesecake.xrage.XRage'
     }
 }
 
