--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.9",
     "@ionic/angular": "^8.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "ionicons": "^7.4.0",
     "rxjs": "~7.8.0",
@@ -27,9 +30,10 @@
     "@angular-devkit/build-angular": "^17.3.9",
     "@angular/cli": "^17.3.9",
     "@angular/compiler-cli": "^17.3.0",
+    "@angular/localize": "^17.3.0",
+    "@ionic/angular-toolkit": "latest",
     "@types/express": "^4.17.17",
     "@types/node": "^18.18.0",
-    "typescript": "~5.4.2",
-    "@ionic/angular-toolkit": "latest"
+    "typescript": "~5.4.2"
   }
 }
