--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -108,7 +108,8 @@
           },
           "defaultConfiguration": "development",
           "options": {
-            "port": 80,
+            "host": "0.0.0.0",
+            "port": 4200,
             "proxyConfig": "src/proxy.conf.json"
           }
         },
