--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "xrage",
   "version": "0.0.0",
   "scripts": {
-    "start": "ng serve --open"
+    "start": "ng serve"
   },
   "private": true,
   "dependencies": {
