basic to jwt auth

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+# Database
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+# Jwt
+jwt.secret.access=${JWT_SECRET_ACCESS}
+jwt.secret.refresh=${JWT_SECRET_REFRESH}
