removed refresh token (нахцй он здесь не нужон)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,5 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
 # Jwt
-jwt.secret.access=${JWT_SECRET_ACCESS}
-jwt.secret.refresh=${JWT_SECRET_REFRESH}
+jwt.secret=${JWT_SECRET}
